# RecoServiceTemplate

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-dev  HW3_Userknn_popular.ipynb  Makefile  Procfile  README.md  Recsys_02.ipynb  UserKnn.ipynb  creds.py  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  gunicorn.config.py  hw_2.ipynb  hw_3.ipynb  hw_5_autoencoder.ipynb  hw_5_dssm.ipynb  hw_5_recbool.ipynb  isort.cfg  kion_EDA.ipynb  load_models_from_google_drive.sh  main.py  metric_validation .ipynb  mypy.ini  openapi.json  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  rquiremets.txt  setup.cfg  userknn.py  (+1 more)
EDA/: top20_Kion.ipynb
Homeworks/: 02.1_homework.ipynb  02.2_homework.ipynb  2_3_MRR.ipynb
Notebook/: metrics_visualization.ipynb
Notebooks/: README.md  RecSys_notebook_EDA.ipynb  ann_model_experiments.ipynb  approach.ipynb  dssm.ipynb  popular_kNN_models.ipynb  recbole.ipynb  user-knn-model-experiments.ipynb  user-knn-model.ipynb
artifacts/: first_experiment_popular.pkl
config/: config.yaml  config_models.yml  config_service.yml
data/: top_20_items.csv  top_items.csv  top_weight_items.csv
homework1/: main.py  requirements.txt
homework2/: Homework_2_part1.ipynb  Homework_2_part_2.ipynb  Homework_2_part_3.ipynb
homework5/: create_data_for_train.ipynb  train_ranker.ipynb
kion_train/: popular_50.csv
mlflow/: docker-compose.yml  knnfinal.ipynb
models/: ann.py  custom_ann.py  features_for_cold.dill  item_mapping.dill  load_models.py  model_utils.py  model_zero.py  popular_dictionary.pickle  unique_features.dill  userknn.py  users_dictionary.pickle
monitoring/: docker-compose.yaml  prometheus.yml
notebooks/: ALS, LightFM, ANN.ipynb  ALS_LightFM_MF.ipynb  HM2.1_Validation.ipynb  HM2.2_pFound.ipynb  HM2.3_MRR.ipynb  HM3.ipynb  HW-3.1.ipynb  HW-3.2-rectools-research.ipynb  HW-3.3-rectools-cv.ipynb  HW-3.4-model-for-online-recs.ipynb  HW2.1_validation.ipynb  HW2.2_metrics_pfound.ipynb  HW2.3_metrics_MRR.ipynb  HW2_metrics.ipynb  HW3.ipynb  HW3_popular.ipynb  HW4_RecSys.ipynb  Homework_2_1_Validation.ipynb  Homework_2_2_MRR.ipynb  Homework_2_2_pFound.ipynb  MRR.ipynb  PFound.ipynb  Practice_2_1_Validation_homework.ipynb  Practice_2_2_Metrics_homework.ipynb  README.md  RecSys_notebook_Baseline.ipynb  UserKNN.ipynb  Validation.ipynb  autoencoders.ipynb  bert4rec_sas4rec.ipynb  dssm.ipynb  homework-5.ipynb  homework2.ipynb  homework2_1.ipynb  homework2_2.ipynb  hw2.ipynb  hw3.ipynb  hw3__ipynb .ipynb  (+18 more)
(+111 files in other folders)
